--- a/07_refs/p-value.bib
+++ b/07_refs/p-value.bib
@@ -213,6 +213,41 @@
   keywords = {false discovery rate,reproducibility,significance tests,statistics}
 }
 
+@article{Colquhoun:2019,
+  title = {The {{False Positive Risk}}: {{A Proposal Concerning What}} to {{Do About}} p-{{Values}}},
+  shorttitle = {The {{False Positive Risk}}},
+  author = {Colquhoun, David},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {192--201},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1529622},
+  urldate = {2024-03-20},
+  abstract = {It is widely acknowledged that the biomedical literature suffers from a surfeit of false positive results. Part of the reason for this is the persistence of the myth that observation of p {$<$} 0.05 is sufficient justification to claim that you have made a discovery. It is hopeless to expect users to change their reliance on p-values unless they are offered an alternative way of judging the reliability of their conclusions. If the alternative method is to have a chance of being adopted widely, it will have to be easy to understand and to calculate. One such proposal is based on calculation of false positive risk(FPR). It is suggested that p-values and confidence intervals should continue to be given, but that they should be supplemented by a single additional number that conveys the strength of the evidence better than the p-value. This number could be the minimum FPR (that calculated on the assumption of a prior probability of 0.5, the largest value that can be assumed in the absence of hard prior data). Alternatively one could specify the prior probability that it would be necessary to believe in order to achieve an FPR of, say, 0.05.},
+  keywords = {Bayes,False positive,False positive report probability,False positive risk,FPR,Likelihood ratio,Point null,Positive predictive value}
+}
+
+@article{Gannonde_Braganca_PereiraPolpo:2019,
+  title = {Blending {{Bayesian}} and {{Classical Tools}} to {{Define Optimal Sample-Size-Dependent Significance Levels}}},
+  author = {Gannon, Mark Andrew and {de Bragan{\c c}a Pereira}, Carlos Alberto and Polpo, Adriano},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {213--222},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1518268},
+  urldate = {2024-03-20},
+  abstract = {This article argues that researchers do not need to completely abandon the p-value, the best-known significance index, but should instead stop using significance levels that do not depend on sample sizes. A testing procedure is developed using a mixture of frequentist and Bayesian tools, with a significance level that is a function of sample size, obtained from a generalized form of the Neyman--Pearson Lemma that minimizes a linear combination of {$\alpha$}, the probability of rejecting a true null hypothesis, and {$\beta$}, the probability of failing to reject a false null, instead of fixing {$\alpha$} and minimizing {$\beta$}. The resulting hypothesis tests do not violate the Likelihood Principle and do not require any constraints on the dimensionalities of the sample space and parameter space. The procedure includes an ordering of the entire sample space and uses predictive probability (density) functions, allowing for testing of both simple and compound hypotheses. Accessible examples are presented to highlight specific characteristics of the new tests.},
+  keywords = {Hardy-Weinberg equilibrium,Neyman-Pearson lemma,Predictive distribution,Significance test}
+}
+
 @article{GoodmanSpruillKomaroff:2019,
   title = {A {{Proposed Hybrid Effect Size Plus}} P-{{Value Criterion}}: {{Empirical Evidence Supporting}} Its {{Use}}},
   shorttitle = {A {{Proposed Hybrid Effect Size Plus}} P-{{Value Criterion}}},
@@ -323,6 +358,23 @@
   file = {/Users/javiermtz/Zotero/storage/UYV6AICB/112.html}
 }
 
+@article{Matthews:2019,
+  title = {Moving {{Towards}} the {{Post}} p {$<$} 0.05 {{Era}} via the {{Analysis}} of {{Credibility}}},
+  author = {Matthews, Robert A. J.},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {202--212},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1543136},
+  urldate = {2024-03-20},
+  abstract = {It is now widely accepted that the techniques of null hypothesis significance testing (NHST) are routinely misused and misinterpreted by researchers seeking insight from data. There is, however, no consensus on acceptable alternatives, leaving researchers with little choice but to continue using NHST, regardless of its failings. I examine the potential for the Analysis of Credibility (AnCred) to resolve this impasse. Using real-life examples, I assess the ability of AnCred to provide researchers with a simple but robust framework for assessing study findings that goes beyond the standard dichotomy of statistical significance/nonsignificance. By extracting more insight from standard summary statistics while offering more protection against inferential fallacies, AnCred may encourage researchers to move toward the post p {$<$} 0.05 era.},
+  keywords = {Analysis of credibility,Bayesian inference,Null hypothesis Significance testing,p-Values}
+}
+
 @article{Nuzzo:2013,
   title = {Online Daters Do Better in the Marriage Stakes},
   author = {Nuzzo, Regina},
@@ -383,6 +435,24 @@
   urldate = {2024-03-15},
   howpublished = {https://xkcd.com/1478/},
   file = {/Users/javiermtz/Zotero/storage/WYU44NEP/1478.html}
+}
+
+@article{Pogrow:2019,
+  title = {How {{Effect Size}} ({{Practical Significance}}) {{Misleads Clinical Practice}}: {{The Case}} for {{Switching}} to {{Practical Benefit}} to {{Assess Applied Research Findings}}},
+  shorttitle = {How {{Effect Size}} ({{Practical Significance}}) {{Misleads Clinical Practice}}},
+  author = {Pogrow, Stanley},
+  year = {2019},
+  month = mar,
+  journal = {The American Statistician},
+  volume = {73},
+  number = {sup1},
+  pages = {223--234},
+  publisher = {Taylor \& Francis},
+  issn = {0003-1305},
+  doi = {10.1080/00031305.2018.1549101},
+  urldate = {2024-03-20},
+  abstract = {Relying on effect size as a measure of practical significance is turning out to be just as misleading as using p-values to determine the effectiveness of interventions for improving clinical practice in complex organizations such as schools. This article explains how effect sizes have misdirected practice in education and other disciplines. Even when effect size is incorporated into RCT research the recommendations of whether interventions are effective are misleading and generally useless to practitioners. As a result, a new criterion of practical benefit is recommended for evaluating research findings about the effectiveness of interventions in complex organizations where benchmarks of existing performance exist. Practical benefit exists when the unadjusted performance of an experimental group provides a noticeable advantage over an existing benchmark. Some basic principles for determining practical benefit are provided. Practical benefit is more intuitive and is expected to enable leaders to make more accurate assessments as to whether published research findings are likely to produce noticeable improvements in their organizations. In addition, practical benefit is used routinely as the research criterion for the alternative scientific methodology of improvement science that has an established track record of being a more efficient way to develop new interventions that improve practice dramatically than RCT research. Finally, the problems with practical significance suggest that the research community should seek different inferential methods for research designed to improve clinical performance in complex organizations, as compared to methods for testing theories and medicines.},
+  keywords = {Applied research,Evidence-based decision-making,Improvement science,Interpreting effect sizes,Leadership-decision-making,Organizational effectiveness}
 }
 
 @misc{Resnick:2017a,
