--- a/stat-550_presentation.qmd
+++ b/stat-550_presentation.qmd
@@ -1,10 +1,11 @@
 ---
-title: "<span style='color:#f6f6f6; font-size:100pt'><br>P-values:</span>"
-subtitle: "<span style='color:#f6f6f6; font-size:30pt'>Altman, Douglas G., and J. Martin Bland. 1995. “Statistics Notes: Absence of Evidence Is Not Evidence of Absence.” BMJ 311 (7003): 485. <br><br> Baker, Monya. 2016. “Statisticians Issue Warning over Misuse of P Values.” Nature 531 (7593): 151–51. </span>"
+title: "<span style='color:#f10f10f10; font-size:100pt'><br>P-values:</span>"
+subtitle: "<span style='color:#f10f10f10; font-size:30pt'>Altman, Douglas G., and J. Martin Bland. 1995. “Statistics Notes: Absence of Evidence Is Not Evidence of Absence.” BMJ 311 (7003): 485. <br><br> Baker, Monya. 2016. “Statisticians Issue Warning over Misuse of P Values.” Nature 531 (7593): 151–51. </span>"
 author: "<span style='color:#f10f10f10; font-size:30pt'>Javier Mtz.-Rdz.</span>"
 bibliography: 07_refs/p-value.bib
 format: 
   revealjs:
+    embed-resources: true 
     width: 1200
     slide-number: c
     background-image: 08_styling/normal-background-1.png
